[package]
name = "rustdds_publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
rustdds = { version = "0.9.1" }
dust_dds = "0.8.2"
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
log = "0.4.21"
futures = "0.3.30"
smol = "2.0.0"
log4rs = "1.3.0"

[build-dependencies]
dust_dds_gen = "0.8.2"


